--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -7,7 +7,8 @@
       <div class="column">
         <h4 class="title is-4">About</h4>
         <p>
-          Exploring the road less travelled in technology, craft, and life. Veteran, Nana, knitter, and web technologist sharing lived experiences.
+          Sharing reflections from the crossroads of technology, creativity, and healing.
+A digital sanctuary for veterans, makers, and mindful souls learning to live gently again.
         </p>
       </div>
 
