updated newsletter cta

--- a/src/_includes/partials/newsletter-cta.njk
+++ b/src/_includes/partials/newsletter-cta.njk
@@ -924,8 +924,8 @@
 
             <div class="ml-form-embedContent" style=" ">
 
-                <h4>Subscribe for Monthly Reflections</h4>
-                <p><br></p>
+                <h4>Subscribe for monthly reflections</h4>
+                <p>Gentle essays, journal prompts, and creative notes—delivered once a month. No noise, just nourishment.</p>
 
             </div>
 
