change layout of introduction

--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -27,10 +27,8 @@ eleventyNavigation:
 <!-- Introduction Section -->
 <section class="section">
   <div class="container">
-    <div class="columns is-multiline">
-      <!-- Column 1 -->
-      <div class="column is-half">
-        <article>
+
+        <article class="content align-center">
           <h2 class="title">Welcome to My Digital Garden</h2>
           <p>
                 This is where I plant stories instead of code—stories about healing, reflection, and the creative
@@ -38,10 +36,9 @@ eleventyNavigation:
     post, I hope you find a small piece of yourself reflected back—the part that still believes in growth,
     even after change.
           </p>
-        </article>
-      </div>
-      <div class="column is-half">
-        <article>
+
+
+
           <h3 class="subtitle">A Turning Point: Life after service</h3>
           <p>
             Leaving the RAAF asked for a different kind of courage. I learned that technology can do more than
@@ -49,30 +46,23 @@ eleventyNavigation:
           </p>
           <p>
           </p>
-        </article>
-      </div>
-      <div class="column is-half">
-        <article>
+
+
+
           <h3 class="subtitle">Healing & Discovery: Weaving the past into meaning</h3>
           <p>
             Healing isn’t erasing what was; it’s weaving it into what is. Through writing, teaching, and making,
         I explore gentler ways to live with depth, honesty, and creative joy.
           </p>
-        </article>
-      </div>
-      <div class="column is-half">
 
-      </div>
-      <div class="column is-full">
-        <article>
+
+
           <h3 class="subtitle">For You: A small sanctuary</h3>
           <p>
             If you’re rebuilding identity, craving calm, or seeking a kinder rhythm—welcome. You belong here.
       </p>
       <p >Start with a reflection, save a prompt for later, or simply breathe and read.</p>
         </article>
-      </div>
-    </div>
   </div>
 </section>
 
