adjusted styling and removed repeats

--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -12,9 +12,9 @@ eleventyNavigation:
       <div class="container has-text-centered p-6" style="background-color: rgba(51, 46, 99, 0.33);">
       <h1 class="title has-text-white has-text-centered"> Exploring the Roads Between Healing and Creation</h1>
       <p class="subtitle has-text-white has-text-centered">
-        I write about the spaces between service and self, technology and tenderness — where healing, creativity, and purpose meet.I write about the spaces between service and self, technology and tenderness — where healing, creativity, and purpose meet.
+        I write about the spaces between service and self, technology and tenderness — where healing, creativity, and purpose meet..
 				</p>
-				<p><em>Veteran, writer, and maker sharing reflections on rebuilding identity and living with meaning.</em></p>
+				<p class="has-text-white has-text-centered mb-2"><em>Veteran, writer, and maker sharing reflections on rebuilding identity and living with meaning.</em></p>
       <div class="buttons is-centered">
         <a class="button is-accent" href="/writings" target="_self">
           Unleash the power of knowledge. Read now!
