--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -42,10 +42,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
+
     {% block head %}{% endblock %}
 
     <!-- Font Awesome - moved to end of head -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <!-- WebAwesome kit (project-specific) -->
+    <script src="https://kit.webawesome.com/051539821f5a4054.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
