--- a/src/_includes/partials/newsletter-cta.njk
+++ b/src/_includes/partials/newsletter-cta.njk
@@ -1,4 +1,21 @@
 <style type="text/css">@import url("https://assets.mlcdn.com/fonts.css?version=1749122");</style>
+
+<!-- Narrow/center the newsletter embed on wide screens, full width on small screens -->
+<style type="text/css">
+  .site-newsletter-cta { display: flex; justify-content: center; }
+  .site-newsletter-cta .ml-form-embedContainer {
+    width: 100% !important;
+    max-width: 100% !important;
+    box-sizing: border-box;
+		background-color: #913073;
+		margin-top: 2rem;
+		margin-bottom: 2rem;
+		border-width: 0px;
+  }
+  @media (max-width: 800px) {
+    .site-newsletter-cta .ml-form-embedContainer { width: 100% !important; max-width: 100% !important; }
+  }
+</style>
     <style type="text/css">
     /* LOADER */
     .ml-form-embedSubmitLoad {
@@ -756,7 +773,8 @@
       }
     </style>
 
-    <div id="mlb2-27031384" class="ml-form-embedContainer ml-subscribe-form ml-subscribe-form-27031384">
+  <div class="site-newsletter-cta">
+  <div id="mlb2-27031384" class="ml-form-embedContainer ml-subscribe-form ml-subscribe-form-27031384">
       <div class="ml-form-align-center ">
         <div class="ml-form-embedWrapper embedForm">
 
@@ -893,7 +911,7 @@
         </div>
       </div>
     </div>
-
+    </div>
 
   <script>
     function ml_webform_success_27031384() {
